--- a/res/layout/my_fansziliaobianjihead.xml
+++ b/res/layout/my_fansziliaobianjihead.xml
@@ -270,7 +270,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="200m"
-                        android:textColor="@color/bggray" />
+                        android:textColor="@color/color_3" />
 
                 </LinearLayout>
 
