--- a/res/layout/my_yirenziliaomobanhead.xml
+++ b/res/layout/my_yirenziliaomobanhead.xml
@@ -15,7 +15,8 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical" >
-<LinearLayout
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -94,7 +95,6 @@
                         android:layout_weight="1"
                         android:src="@drawable/d10_16" />
                 </LinearLayout>
-
             </LinearLayout>
 
             <LinearLayout
@@ -131,9 +131,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/bggray"
+                android:background="@color/spilt_line_color"
                 android:orientation="vertical" >
-
             </LinearLayout>
 
             <LinearLayout
@@ -201,15 +200,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:text="8分钟前" />
-
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/bggray"
+                android:background="@color/spilt_line_color"
                 android:orientation="vertical" >
-
             </LinearLayout>
 
             <LinearLayout
@@ -242,7 +239,6 @@
                         android:layout_weight="1"
                         android:text="317"
                         android:textColor="@color/bt_red" />
-
                 </LinearLayout>
 
                 <ImageView
@@ -266,13 +262,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:src="@drawable/f10_45" />
-
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/bggray"
+                android:background="@color/spilt_line_color"
                 android:orientation="vertical" >
             </LinearLayout>
 
@@ -287,7 +282,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp" >
+                    android:layout_marginTop="12dp" >
 
                     <TextView
                         android:id="@+id/TextView19"
@@ -298,22 +293,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
                             android:id="@+id/TextView20"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="吴沐熙" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -334,22 +328,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
                             android:id="@+id/TextView18"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="Vicky" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -370,22 +363,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
                             android:id="@+id/TextView16"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="25" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -406,22 +398,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
                             android:id="@+id/TextView14"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="双子座" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -442,22 +433,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
                             android:id="@+id/TextView12"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="演员" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -478,22 +468,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
                             android:id="@+id/TextView10"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                           style="@style/main_color3_style"
                             android:text="湖南省阮江市" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -514,22 +503,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
                             android:id="@+id/TextView08"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="172cm" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -550,22 +538,21 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
                         <TextView
                             android:id="@+id/TextView06"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="89,60,95" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
-                            android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -583,7 +570,7 @@
                         android:layout_height="wrap_content"
                         android:text="我的作品" />
 
-                   <LinearLayout
+                    <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -595,12 +582,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" >
                         </ListView>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -636,7 +624,7 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -672,14 +660,12 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
-
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 
