--- a/res/layout/chance_offer_layout.xml
+++ b/res/layout/chance_offer_layout.xml
@@ -27,7 +27,7 @@
                     android:background="@drawable/c11_02" />
 
                 <Button
-                    android:id="@+id/button1"
+                    android:id="@+id/bt_chance_offer_picture"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|right"
