--- a/res/layout/dialog_self_title_one.xml
+++ b/res/layout/dialog_self_title_one.xml
@@ -21,7 +21,8 @@
             android:layout_gravity="center"
             android:text="提示"
             android:visibility="gone"
-            android:textSize="18sp" />
+            android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
  
         <TextView
             android:id="@+id/tv_dialog_message"
@@ -42,7 +43,7 @@
         android:layout_weight="1"
         android:background="@drawable/bt_dialog_one"
         android:text="确认"
-        android:textColor="@color/color_2"
+        android:textColor="@color/main_red"
         android:textSize="18sp" />
 
 </LinearLayout>
