--- a/res/layout/user_fragment.xml
+++ b/res/layout/user_fragment.xml
@@ -3,12 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-<include layout="@layout/main_top_layout" />
+
+    <include layout="@layout/main_top_layout" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="93"
-        android:background="@color/bggray"
+        android:background="@color/main_grey"
         android:orientation="vertical" >
 
         <ScrollView
@@ -80,14 +82,17 @@
                                 android:id="@+id/textView2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="星币余额" />
+                                android:text="星币余额"
+                                android:textColor="@color/color_3" />
 
                             <TextView
                                 android:id="@+id/textView3"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:text="56" />
+                                android:text="56"
+                                android:textColor="@color/color_3" />
+
                         </LinearLayout>
                     </LinearLayout>
 
@@ -106,104 +111,123 @@
                     android:background="@color/spilt_line_color" >
                 </LinearLayout>
 
-<LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:background="@color/main_light_white" >
-
-            <LinearLayout
-                android:id="@+id/lmyhaoyou"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="226" />
+                    android:layout_marginBottom="15dp"
+                    android:background="@color/main_light_white" >
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="好友" />
-            </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/lmyhaoyou"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical" >
 
-            <LinearLayout
-                android:id="@+id/lmytuijian"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical" >
+                        <TextView
+                            android:id="@+id/textView4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="226"
+                            android:textColor="@color/color_3" />
 
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="123" />
+                        <TextView
+                            android:id="@+id/textView5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="好友"
+                            android:textColor="@color/color_3" />
 
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="推荐" />
-            </LinearLayout>
+                    </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/lmyguanzhu"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical" >
+                    <LinearLayout
+                        android:id="@+id/lmytuijian"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="145" />
+                        <TextView
+                            android:id="@+id/textView6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="123"
+                            android:textColor="@color/color_3" />
 
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="关注" />
-            </LinearLayout>
+                        <TextView
+                            android:id="@+id/textView7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="推荐"
+                            android:textColor="@color/color_3" />
 
-            <LinearLayout
-                android:id="@+id/lmyfans"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical" >
+                    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="46" />
+                    <LinearLayout
+                        android:id="@+id/lmyguanzhu"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="粉丝" />
-            </LinearLayout>
-        </LinearLayout>
+                        <TextView
+                            android:id="@+id/textView8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="145"
+                            android:textColor="@color/color_3" />
+
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="关注"
+                            android:textColor="@color/color_3" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/lmyfans"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical" >
+
+                        <TextView
+                            android:id="@+id/textView11"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="粉丝"
+                            android:textColor="@color/color_3" />
+
+                        <TextView
+                            android:id="@+id/textView10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="46"
+                            android:textColor="@color/color_3" />
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/spilt_line_color" >
+                </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/lmyqianbao"
                     android:layout_width="match_parent"
@@ -227,9 +251,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="我的钱包"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="我的钱包"/>
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/imageView8"
@@ -238,7 +262,12 @@
                         android:layout_marginRight="10dp"
                         android:layout_weight="5"
                         android:src="@drawable/m19_13" />
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/spilt_line_color" >
                 </LinearLayout>
 
                 <LinearLayout
@@ -265,9 +294,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="工作管理"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="工作管理" />
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/ImageView01"
@@ -302,9 +331,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="服务管理"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="服务管理" />
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/ImageView02"
@@ -313,6 +342,12 @@
                         android:layout_marginRight="10dp"
                         android:layout_weight="5"
                         android:src="@drawable/m19_13" />
+                </LinearLayout>
+                
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/spilt_line_color" >
                 </LinearLayout>
 
                 <LinearLayout
@@ -339,9 +374,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="黑名单"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="黑名单" />
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/ImageView03"
@@ -351,8 +386,15 @@
                         android:layout_weight="5"
                         android:src="@drawable/m19_13" />
                 </LinearLayout>
+                
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/spilt_line_color" >
+                </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lgengxin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
@@ -375,9 +417,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="检测更新"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="检测更新" />
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/ImageView04"
@@ -411,9 +453,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="关于我们"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="关于我们" />
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/ImageView05"
@@ -447,9 +489,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="用户协议"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="用户协议" />
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/ImageView06"
@@ -461,6 +503,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                     android:id="@+id/lbangzhu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
@@ -483,9 +526,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="帮助与反馈"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="帮助与反馈" />
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/ImageView07"
@@ -497,6 +540,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/lqinglitupian"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
@@ -519,9 +563,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="87"
+                        android:text="清理图片缓存"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp"
-                        android:text="清理图片缓存" />
+                        android:textSize="15dp" />
 
                     <ImageView
                         android:id="@+id/ImageView08"
@@ -530,16 +574,16 @@
                         android:layout_marginRight="10dp"
                         android:layout_weight="5"
                         android:src="@drawable/m19_13" />
-
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
-	<LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="5"
-                    android:background="@color/main_light_white" >
-                </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:background="@color/main_light_white" >
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
